# asst1

./: .gitignore  convert_glb_to_obj.py  material.mtl
Renderer/: handin.tar
Renderer/RasterRenderer/: CMakeLists.txt  DeferredTiledRenderer.cpp  ForwardLightingShader.h  GBuffer.h  GeometryPassShader.h  IRasterRenderer.h  LightingPassShader.h  ModelResource.h  Rasterizer.h  RendererImplBase.h  TiledRenderer.cpp
Renderer/TestDriver/: CMakeLists.txt  CompareNFLRenderers.cpp  NFLScene.h  NFLTrackingData.cpp  NFLTrackingData.h  NFLVideoRenderer.cpp  TestForwardOnly.cpp  generate_light_scaling_graphs.py  generate_nfl_comparison_graphs.py
Renderer/lib/tbb/: task.h
